--- a/public/css/material-kit.css
+++ b/public/css/material-kit.css
@@ -14,6 +14,14 @@
  
  */
  
+/* My additions */
+.facebookLogin {
+  text-align: center;
+  font-size: 5vw;
+  padding-top: 3vw;
+  padding-bottom: 3vw;
+}
+
 /* ANIMATION */
 /* SHADOWS */
 /* Shadows (from mdl http://www.getmdl.io/) */
