--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,9 +31,13 @@
             <div class="card card-signup">
               <form class="form" method="" action="">
                 <div class="header header-info text-center">
-                  <h4>Sign In</h4>
+                  <h4>Welcome to RUHereYet</h4>
                 </div>
-                <div class="content">
+                  <p class="facebookLogin">  Please Login Through Facebook
+                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                    </fb:login-button>
+                  </p>
+                <!--<div class="content">
 
                   <div class="input-group">
                     <span class="input-group-addon">
@@ -50,20 +54,12 @@
                     <input type="password" placeholder="Password..." class="form-control" required/>
                   </div>
 
-                  <!-- If you want to add a checkbox to this form, uncomment this code
-
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="optionsCheckboxes" checked>
-                      Subscribe to newsletter
-                    </label>
-                  </div> -->
                 </div>
                 <div class="footer text-center">
                   <input type="submit" value = "Sign In" class="btn btn-simple btn-primary btn-lg" onclick="window.location='/home';">
                   <p class="text-muted">Need an account?</p>
                   <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
-                </div>
+                </div>-->
               </form>
             </div>
           </div>
@@ -88,5 +84,8 @@
 
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="/js/material-kit.js" type="text/javascript"></script>
+
+{{> facebook}}
+<script src="/js/facebook.js"></script>
 
 </html>
